--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="wrapper">
       <h1>Derefind &mdash; Refind Bookmark Converter</h1>
       
-      <p>This JavaScript application processes your Refind export file on your computer. It creates an output file that can be imported to Diigo and Shaari with the tags preserved. It processes files locally, not on any server. <a href="https://github.com/ShawnPConroy/Derefind">Find out more about this application</a>.</p>
+      <p>This JavaScript application processes your Refind export file on your computer. It creates an output file that can be imported to Diigo and Shaarli with the tags preserved. It processes files locally, not on any server. <a href="https://github.com/ShawnPConroy/Derefind">Find out more about this application</a>.</p>
       
       <p><strong>Instructions</strong>: Select the file below. It will automatically process the file and start a download of the result.
       It should take 1-10 second, unless you have several hundred or thousands of bookmarks to be processed. Please note that the download will
